--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
+    "react-parallax-tilt": "^1.5.84",
     "react-redux": "^7.2.6",
+    "react-responsive-modal": "^6.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-tsparticles": "^1.38.0",
+    "react-webcam": "^6.0.0",
     "redux": "^4.1.2",
     "web-vitals": "^2.1.2"
   },
