--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "fs": "^0.0.1-security",
+    "ip": "^1.1.5",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "python-shell": "^3.0.1"
   }
