--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "face-api.js": "^0.22.2",
     "firebase": "^9.6.1",
     "python-shell": "^3.0.1",
     "react": "^17.0.2",
